# mufica

./: Cargo.toml  README.md
crates/mufica-matrix/: Cargo.toml
crates/mufica-matrix/examples/: matrix-echo.rs
crates/mufica-matrix/src/: client.rs  config.rs  errors.rs  lib.rs  subscriber.rs  timeline.rs
src/: args.rs  backend.rs  config.rs  errors.rs  frontend.rs  history.rs  main.rs  service.rs  subscriber.rs  worker.rs
src/backend/: text_generation_webui.rs
src/config/: matrix.rs  text_generation_webui.rs
src/frontend/: matrix.rs
src/history/: matrix.rs  text_generation_webui.rs
src/worker/: matrix.rs
