[workspace]
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.4.1"

[package]
name = "mufica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text-generation-webui", "openai", "matrix"]
matrix = ["dep:matrix-sdk"]
openai = ["dep:async-openai"]
text-generation-webui = ["dep:text-generation-webui-api"]


[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.worskpace = true

async-openai = { version = "0.16.2", optional = true }
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", optional = true }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
text-generation-webui-api = { git = "https://github.com/fluo10/text-generation-webui-api-rs", optional = true }
