[package]
name = "mufica-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.worskpace = true
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk"}
matrix-sdk-ui = { git = "https://github.com/matrix-org/matrix-rust-sdk"}
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
imbl = "2.0.3"
eyeball-im = "0.4.2"
futures-util = "0.3.29"
ruma = {version = "0.9.4", features = ["markdown"]}

[dev-dependencies]
clap.workspace = true
